Change the behaviour of localization dropdown in navbar and update lihatmatkul page who can update the courses

--- a/lang/id.json
+++ b/lang/id.json
@@ -14,7 +14,7 @@
     "Pengaturan" : "Pengaturan",
     "Keluar" : "Keluar",
     "Hak Cipta" : "Hak Cipta",
-    "Segera Datang" : "Hak Cipta",
+    "Segera Datang" : "Segera Datang",
     "Yakin ingin keluar ?": "Yakin ingin keluar ?",
     "Pilih Keluar untuk keluar": "Pilih Keluar untuk keluar",
     "Fitur ini masih belum aktif": "Fitur ini masih belum aktif",
