--- a/lang/en.json
+++ b/lang/en.json
@@ -44,6 +44,9 @@
     "Menu Memulai Sesi": "Session Start Menu",
     "Buka Sesi": "Start a Session",
     "Pindai QR": "Scan QR",
+    "Dosen hadir?": "Is the course lecturer present?",
+    "Jadwal Perkuliahan Hari Ini": "The Courses Today",
+    "Tidak ada jadwal mata perkuliahan hari ini!": "No courses for today!",
     "Pastikan Anda membuka sesi matkul dengan benar dan pastikan menekan tombol \"Buka Sesi\" sebelum memindai QR!": "Make sure you start the correct course attendance session and click \"Start a Session\" before scan the QR!",
     "Waktu Sesi Absensi Akan Berakhir dalam:": "Attendance Session Time Will Be End In:",
     "Absensi Matkul Dipilih:": "The Choosen Course Attendance:",
