--- a/lang/id.json
+++ b/lang/id.json
@@ -44,6 +44,9 @@
     "Menu Memulai Sesi": "Menu Memulai Sesi",
     "Buka Sesi": "Buka Sesi",
     "Pindai QR": "Pindai QR",
+    "Dosen hadir?": "Dosen hadir?",
+    "Jadwal Perkuliahan Hari Ini": "Jadwal Perkuliahan Hari Ini",
+    "Tidak ada jadwal mata perkuliahan hari ini!": "Tidak ada jadwal mata perkuliahan hari ini!",
     "Pastikan Anda membuka sesi matkul dengan benar dan pastikan menekan tombol \"Buka Sesi\" sebelum memindai QR!": "Pastikan Anda membuka sesi matkul dengan benar dan pastikan menekan tombol \"Buka Sesi\" sebelum memindai QR!",
     "Waktu Sesi Absensi Akan Berakhir dalam:": "Waktu Sesi Absensi Akan Berakhir dalam:",
     "Absensi Matkul Dipilih:": "Absensi Matkul Dipilih:",
